--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,11 +12,11 @@
   <meta property="og:title" content="Feniks Dance Show">
   <meta property="og:image" content="http://feniks-dance.ru/img/og_image.jpg">
   <link rel="image_src" href="http://feniks-dance.ru/img/og_image.jpg">
-  <link rel="icon" type="image/png" href="{{site.baseurl}}/img/favicon.ico" />
+  <link rel="icon" type="image/png" href="/img/favicon.ico" />
   <meta property="og:description">
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Playfair+Display+SC">
-  <link rel="stylesheet" href="{{site.baseurl}}/libs/jquery-colorbox/example1/colorbox.css">
-  <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
+  <link rel="stylesheet" href="/libs/jquery-colorbox/example1/colorbox.css">
+  <link rel="stylesheet" href="/css/main.css">
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -43,9 +43,9 @@
     {% include footer.html%}
   </footer>
 <script src="http://yastatic.net/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
-<script src="{{site.baseurl}}/libs/jquery-colorbox/jquery.colorbox.js" type="text/javascript"></script>
+<script src="/libs/jquery-colorbox/jquery.colorbox.js" type="text/javascript"></script>
 <script src="http://yastatic.net/angularjs/1.2.23/angular.min.js" type="text/javascript"></script>
-<script src="{{site.baseurl}}/js/main.js" type="text/javascript"></script>
+<script src="/js/main.js" type="text/javascript"></script>
 <script type="text/javascript">
   (function (d, w, c) {
     (w[c] = w[c] || []).push(function() {
