--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@ body {
   padding-bottom: 50px;
   margin-top: 120px;
 }
+.ng-cloak {
+	display: 		none;
+}
 body header {
   height: 120px;
   position: fixed;
