--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
   <link rel="image_src" href="http://feniks-dance.ru/img/og_image.jpg">
   <link rel="icon" type="image/png" href="/img/favicon.ico" />
   <meta property="og:description">
+  <meta name='yandex-verification' content='4a97081f2a1f6313' />
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Playfair+Display+SC">
   <link rel="stylesheet" href="/libs/jquery-colorbox/example1/colorbox.css">
   <link rel="stylesheet" href="/css/main.css">
