--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,14 +8,14 @@
   <meta name="description" content="{{page.description}}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:site_name" content="feniks-dance">
-  <meta property="og:url" content="http://feniks-dance.ru">
+  <meta property="og:url" content="https://feniks-dance.github.io">
   <meta property="og:title" content="Feniks Dance Show">
-  <meta property="og:image" content="http://feniks-dance.ru/img/og_image.jpg">
-  <link rel="image_src" href="http://feniks-dance.ru/img/og_image.jpg">
+  <meta property="og:image" content="https://feniks-dance.github.io/img/og_image.jpg">
+  <link rel="image_src" href="https://feniks-dance.github.io/img/og_image.jpg">
   <link rel="icon" type="image/png" href="/img/favicon.ico" />
   <meta property="og:description">
   <meta name='yandex-verification' content='4a97081f2a1f6313' />
-  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Playfair+Display+SC">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Playfair+Display+SC">
   <link rel="stylesheet" href="/libs/jquery-colorbox/example1/colorbox.css">
   <link rel="stylesheet" href="/css/main.css">
   <script>
@@ -43,9 +43,9 @@
   <footer class="row">
     {% include footer.html%}
   </footer>
-<script src="http://yastatic.net/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
+<script src="https://yastatic.net/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
 <script src="/libs/jquery-colorbox/jquery.colorbox.js" type="text/javascript"></script>
-<script src="http://yastatic.net/angularjs/1.2.23/angular.min.js" type="text/javascript"></script>
+<script src="https://yastatic.net/angularjs/1.2.23/angular.min.js" type="text/javascript"></script>
 <script src="/js/main.js" type="text/javascript"></script>
 <script type="text/javascript">
   (function (d, w, c) {
